# ChangeLog for app-i18n/libhangul
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/libhangul/ChangeLog,v 1.7 2007/08/24 18:02:48 armin76 Exp $

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> libhangul-0.0.4.ebuild:
  alpha stable wrt #188190

  17 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  libhangul-0.0.4.ebuild:
  stable x86, bug 188190

  10 Aug 2007; MATSUU Takuto <matsuu@gentoo.org> libhangul-0.0.6.ebuild:
  Removed unused USE flag.

*libhangul-0.0.6 (08 Aug 2007)

  08 Aug 2007; MATSUU Takuto <matsuu@gentoo.org> +libhangul-0.0.6.ebuild:
  Version bumped.

  26 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> libhangul-0.0.4.ebuild:
  Add ~alpha keyword.

*libhangul-0.0.4 (15 Jan 2007)

  15 Jan 2007; MATSUU Takuto <matsuu@gentoo.org> +libhangul-0.0.4.ebuild:
  Version bumped, bug #160385.

*libhangul-0.0.3 (04 Nov 2006)

  04 Nov 2006; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
  +libhangul-0.0.3.ebuild:
  Initial import.
