@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/libhangul/Attic/libhangul-0.0.4.ebuild,v 1.4 2007/08/24 18:02:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/libhangul/Attic/libhangul-0.0.4.ebuild,v 1.5 2007/09/01 13:43:17 nixnut Exp $
 
 DESCRIPTION="libhangul is a generalized and portable library for processing hangul."
 HOMEPAGE="http://kldp.net/projects/hangul/"
@@ -8,7 +8,7 @@ SRC_URI="http://kldp.net/frs/download.php/3733/${P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="alpha ~amd64 x86"
+KEYWORDS="alpha ~amd64 ~ppc x86"
 IUSE=""
 
 src_install() {
