@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/scim-hangul
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-hangul/ChangeLog,v 1.20 2007/08/24 18:03:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-hangul/ChangeLog,v 1.21 2007/09/01 13:45:11 nixnut Exp $
+
+  01 Sep 2007; nixnut <nixnut@gentoo.org> scim-hangul-0.3.1.ebuild:
+  Added ~ppc wrt bug 188190
 
   24 Aug 2007; Raúl Porcel <armin76@gentoo.org> scim-hangul-0.3.1.ebuild:
   alpha stable wrt #188190
